2018-02-25  Araki Ken  <arakiken@users.sf.net>

	* ui_screen_manager.c: "No fonts" error message is shown by bl_dialog()
	  instead of bl_msg_printf().

	* sdl2/ui_display.c: Falling into infinite sleep in select() is fixed.

	* syswminfo.c: syswminfo_is_thread_safe() returns 0 on cocoa.

	* cocoa.m: create_dialog() checks if the current thread is main thread or not.

	* configure.in: It is possible to use fontconfig on SDL2/win32.

2018-02-25  Araki Ken  <arakiken@users.sf.net>

	* ui_shortcut.c: Control+F* shortcut keys => Command+F* on SDL2 / MacOSX.

	* sdl2/ui_display.c: SDL_DisplayMode::refresh_rate > 0 is checked before
	  calculating vsync_interval_msec.

	* inputmethod/*/Makefile.in: @SDL2_CFLAGS@ is added to include <SDL.h> from
	  ui.h correctly.

	* configure.in: Either AC_CHECK_HEADER(hb-ft.h) or AC_CHECK_HEADER(hb-coretext.h"
	  is executed if harfbuzz is enabled.

	* cocoa/install-sdl2.sh: Added.

2018-02-24  Araki Ken  <arakiken@users.sf.net>

	* sdl2/ui_display.c: SDL_CondSignal() is called after processing pty events.

2018-02-24  Araki Ken  <arakiken@users.sf.net>

	* README.fb, README.sdl2, README.wayland, README.win32: Updated.

	* sdl2/ui_display.c: init_display() specifies x and y position of SDL_Window.

2018-02-24  Araki Ken  <arakiken@users.sf.net>

	* sdl2/ui_display.c: pthread is replaced by SDL_thread.

	* fb/ui_connect_dialog.c: ui_get_opened_displays() is called instead of
	  ui_display_receive_next_event() on SDL2.

	* syswminfo.[ch]: Added.

	* MLTerm.java: MessageBox is removed from startMLTerm().

	* MLTermApplet.java: MessageBox is removed from run().

	* ConfirmDialog.java: 'boolean okcancel' is added to show().

	* MLTermPty.c: dialog_callback() supports BL_DIALOG_ALERT.

2018-02-22  Araki Ken  <arakiken@users.sf.net>

	* vt_term.c: "Failed to open pty" message is shown if vt_pty_new() fails.

	* sdl2/ui_display.c: bl_dialog_set_callback(dialog_cb) is added.

	* bl_util.h:
	  - K_{MAX|MIN} => BL_{MAX|MIN}